--- a/framework/resource/less/codekart.less
+++ b/framework/resource/less/codekart.less
@@ -3,11 +3,16 @@
  *  主页面样式
  */
 
+body{
+  background: #ddd;
+}
+
 .forkme{
   position: absolute; top: 0; right: 0px;
   display: block; width: 149px; height: 149px;
   background: url("<%cssimg%>codekart/forkme.png") center;
 }
+
 
 
 .wrap{
@@ -22,6 +27,42 @@
     padding: 10px 0;
   }
 }
+
+
+.getstart:hover {
+  cursor: pointer;
+  background-color: #9CDF4D;
+  color: #689433;
+  border: solid 1px #7BAF3C;
+  background: -webkit-linear-gradient(top, #9CDF4D, #90CE47);
+  background: -moz-linear-gradient(top, #9CDF4D, #90CE47);
+  background: -o-linear-gradient(top, #9CDF4D, #90CE47);
+  background: -ms-linear-gradient(top, #9CDF4D, #90CE47);
+  background:linear-gradient(top, #9CDF4D, #90CE47);
+}
+
+.getstart {
+  width: 320px;
+  padding: 15px;
+  text-align: center;
+  color: #527528;
+  font-size: 25px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(255,255,255,.5);
+  border: solid 1px #6E9D36;
+  background-color: #90CE47;
+  background: -webkit-linear-gradient(top,#90CE47, #6F9E36);
+  background: -moz-linear-gradient(top,#90CE47, #6F9E36);
+  background: -o-linear-gradient(top,#90CE47, #6F9E36);
+  background: -ms-linear-gradient(top,#90CE47, #6F9E36);
+  background:linear-gradient(top,#90CE47, #6F9E36);
+  border-radius: 4px;
+  box-shadow: 0 2px 20px silver;
+  margin: 0 auto;
+}
+
+
+
 
 .intro{
   background: #f6f6f6; color: #666; text-shadow: 0 1px 0 #fff;
@@ -98,3 +139,5 @@
     font-size: 12px;
   }
 }
+
+
