--- a/static/css/codekart.01100.css
+++ b/static/css/codekart.01100.css
@@ -113,6 +113,9 @@ a:hover {
 /**
  *  主页面样式
  */
+body {
+  background: #ddd;
+}
 .forkme {
   position: absolute;
   top: 0;
@@ -133,6 +136,36 @@ a:hover {
 }
 .header .wrap {
   padding: 10px 0;
+}
+.getstart:hover {
+  cursor: pointer;
+  background-color: #9CDF4D;
+  color: #689433;
+  border: solid 1px #7BAF3C;
+  background: -webkit-linear-gradient(top, #9cdf4d, #90ce47);
+  background: -moz-linear-gradient(top, #9cdf4d, #90ce47);
+  background: -o-linear-gradient(top, #9cdf4d, #90ce47);
+  background: -ms-linear-gradient(top, #9cdf4d, #90ce47);
+  background: linear-gradient(top, #9cdf4d, #90ce47);
+}
+.getstart {
+  width: 320px;
+  padding: 15px;
+  text-align: center;
+  color: #527528;
+  font-size: 25px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+  border: solid 1px #6E9D36;
+  background-color: #90CE47;
+  background: -webkit-linear-gradient(top, #90ce47, #6f9e36);
+  background: -moz-linear-gradient(top, #90ce47, #6f9e36);
+  background: -o-linear-gradient(top, #90ce47, #6f9e36);
+  background: -ms-linear-gradient(top, #90ce47, #6f9e36);
+  background: linear-gradient(top, #90ce47, #6f9e36);
+  border-radius: 4px;
+  box-shadow: 0 2px 20px silver;
+  margin: 0 auto;
 }
 .intro {
   background: #f6f6f6;
